myteo/test/analyze/name_resolution/imports.exp
ERROR: test/analyze/name_resolution/imports.myte:17:2 Could not resolve name "remote"
 17 |   remote;
    |   ^^^^^^

ERROR: test/analyze/name_resolution/imports.myte:18:2 Could not resolve name "F"
 18 |   F;
    |   ^

ERROR: test/analyze/name_resolution/imports.myte:19:2 Could not resolve name "nonexistent"
 19 |   nonexistent;
    |   ^^^^^^^^^^^